error_log.txt
file:///Users/kundankumar/Desktop/knee-care-app/routes/auth.ts:3
import { generateToken, verifyToken, AuthRequest } from "../middleware/auth.ts";
                                     ^^^^^^^^^^^
SyntaxError: The requested module '../middleware/auth.ts' does not provide an export named 'AuthRequest'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.1
